SalesforceToPaypal/force-app/main/default/objects/PayPal_Error_Log__c/PayPal_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors from PayPal integration</description>
    <label>PayPal Error Log</label>
    <nameField>
        <displayFormat>ERR-{00000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayPal Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>