SalesforceToPaypal/force-app/main/default/objects/PayPal_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Type of error encountered</description>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_ERROR</fullName>
                <default>true</default>
                <label>API Error</label>
            </value>
            <value>
                <fullName>AUTHENTICATION_ERROR</fullName>
                <label>Authentication Error</label>
            </value>
            <value>
                <fullName>VALIDATION_ERROR</fullName>
                <label>Validation Error</label>
            </value>
            <value>
                <fullName>NETWORK_ERROR</fullName>
                <label>Network Error</label>
            </value>
            <value>
                <fullName>SYSTEM_ERROR</fullName>
                <label>System Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>