SalesforceToPaypal/force-app/main/default/objects/PayPal_Error_Log__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Payment Transaction if applicable</description>
    <label>Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>PayPal Error Logs</relationshipLabel>
    <relationshipName>PayPal_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>